# ChangeLog for dev-java/gnu-classpath
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-classpath/ChangeLog,v 1.98 2010/01/01 17:59:55 scarabeus Exp $

  01 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  gnu-classpath-0.97-r1.ebuild, gnu-classpath-0.97.2.ebuild:
  mozilla-firefox-bin -> firefox-bin

  14 Dec 2009; Brent Baude <ranger@gentoo.org> gnu-classpath-0.98-r1.ebuild:
  Marking gnu-classpath-0.98-r1 ppc64 for bug 296215

  09 Dec 2009; Markus Meier <maekke@gentoo.org>
  gnu-classpath-0.98-r1.ebuild:
  amd64/x86 stable, bug #296215

  13 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  gnu-classpath-0.98-r1.ebuild:
  Pull the version of gjdoc that uses gjl launcher to prevent insufficient
  heap memory, bug #292534.

  09 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  gnu-classpath-0.98-r1.ebuild:
  Ensure ecj has enough heap space. Fixed build failure for me.

*gnu-classpath-0.98-r1 (08 Nov 2009)

  08 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  +gnu-classpath-0.98-r1.ebuild:
  Revbump to register the classes to package.env, so they can be used by
  java-config.

  18 Sep 2009; Torsten Veller <tove@gentoo.org>
  gnu-classpath-0.97-r1.ebuild, gnu-classpath-0.97.2.ebuild:
  Fix typo: s/REPEND/RDEPEND/

  14 Jul 2009; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-0.98.ebuild:
  Disable -Werror. Fixes bug #268299.

*gnu-classpath-0.98 (14 Jul 2009)

  14 Jul 2009; Petteri Räty <betelgeuse@gentoo.org>
  +gnu-classpath-0.98.ebuild, metadata.xml:
  Version bump from java overlay with some fixes by me. Thanks to
  gnu_andrew.

  25 Jun 2009; Ben de Groot <yngwin@gentoo.org> -gnu-classpath-0.90.ebuild,
  -gnu-classpath-0.92.ebuild, -gnu-classpath-0.93.ebuild,
  -gnu-classpath-0.97.ebuild, gnu-classpath-0.97-r1.ebuild,
  gnu-classpath-0.97.2.ebuild:
  Drop old ebuilds which nothing depends on and which have illegal qt4 dep
  (bug 217173). Simplify qt4 dep for remaining ebuilds.
