@@ -5,6 +5,6 @@ DIST classpath-0.98.tar.gz 11021342 RMD160 9a20f4ca9379d90cbca644c0e9410df1c5757
 EBUILD gnu-classpath-0.97-r1.ebuild 3395 RMD160 dde1015c3697858d8443a51df622b45354a1e144 SHA1 0740675976cd30fa66f7a8b3a1c05c5717bb6429 SHA256 69a986f39bfaa964096dab7848c79b9c28edf4153d2868dfdb38369565936234
 EBUILD gnu-classpath-0.97.2.ebuild 2543 RMD160 9d846694eb22424145f9196087a27e9ba37abbf7 SHA1 902d1d9c57b126703bf68b9fdc3eedd4d3773736 SHA256 39c45e2ebbdbb2c23a32f7d5ef486d0ae36b133fe3eecc6403dcb147ce3c8844
 EBUILD gnu-classpath-0.98-r1.ebuild 3471 RMD160 fe04ee9500e806dda552f935c0f2ce9a41c994e9 SHA1 f4ff8a2906634e230ecfcb599fb190d903c12327 SHA256 52c7e4c0a9f3742e02ba872106bf17157a3b9bdc70ace82bdada932625a1d9d5
-EBUILD gnu-classpath-0.98.ebuild 3078 RMD160 b0f5464049af3252770460486eb64e40c1ed2c4a SHA1 2a5638406ee3c587a44ad5cb3225eaf33388c67e SHA256 c2405dbace45536408b772b7ab83e008b42d2bc863202ba269e1ff42c7793f4d
-MISC ChangeLog 14503 RMD160 2e5c9724f438d4df044be5130c2c0c63167265af SHA1 b9cf129c4b2184974c7bb5dd7b2168bd229da325 SHA256 8d9ffe2198a9d060578da46020343e0344e26992a2ae43c4ca0a6cde340c7d7f
+EBUILD gnu-classpath-0.98-r2.ebuild 3475 RMD160 141cdbb7063595cfe02d14615b6439fc28f2c62e SHA1 637d25ababd22c9518f2879e0554cc070682bf49 SHA256 f25e0d33bb7635aef7f3fca33172564b0bd86b9ae6cde5246b8975d597e7add3
+MISC ChangeLog 14866 RMD160 4ed5a14dc52d87c60fcae4325ac51b3ffa70ee05 SHA1 5bf8cbfe64b59841d157edc03c083a9a962a1ddd SHA256 61c395ef195965671be1b5f3d0fc62e74b28d9530b33b33fe6c5f587c5df8f6e
 MISC metadata.xml 456 RMD160 36f9f9619fd32cdfec79883a039433e4473f7f9f SHA1 4bd8e09e3b936882112ba76e7d8a820aa1c0d738 SHA256 ce74184ed34e49a121939077d436c7b73eff7b046f5367d2241d7d2d8f0a6061
