@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-classpath/gnu-classpath-0.98.ebuild,v 1.2 2009/07/14 21:40:34 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-classpath/gnu-classpath-0.98-r2.ebuild,v 1.1 2010/01/09 14:12:21 betelgeuse Exp $
 
 EAPI=2
 
@@ -19,7 +19,7 @@ IUSE="alsa debug doc dssi examples gconf gjdoc gmp gtk gstreamer nsplugin qt4 xm
 
 # xulrunner: http://bugs.gentoo.org/show_bug.cgi?id=257803
 RDEPEND="alsa? ( media-libs/alsa-lib )
-		doc? ( >=dev-java/gjdoc-0.7.9 )
+		doc? ( >=dev-java/gjdoc-0.7.9-r2 )
 		dssi? ( >=media-libs/dssi-0.9 )
 		gconf? ( gnome-base/gconf )
 		gjdoc? ( >=dev-java/antlr-2.7.1:0 )
@@ -63,14 +63,23 @@ DEPEND="app-arch/zip
 					x11-proto/xproto
 				)
 			)
+		>=virtual/jdk-1.5
 		${RDEPEND}"
+
+RDEPEND=">=virtual/jre-1.5
+	${RDEPEND}"
 
 S=${WORKDIR}/${MY_P}
 
 src_configure() {
 	# We require ecj anyway, so force it to avoid problems with bad versions of javac
-	export JAVAC="${EPREFIX}/usr/bin/ecj-3.3 -nowarn"
+	export JAVAC="${EPREFIX}/usr/bin/ecj-3.3"
 	export JAVA="${EPREFIX}/usr/bin/java"
+	# build takes care of them itself, duplicate -source -target kills ecj
+	export JAVACFLAGS="-nowarn"
+	# build system is passing -J-Xmx768M which ecj however ignores
+	# this will make the ecj launcher do it (seen case where default was not enough heap)
+	export gjl_java_args="-Xmx768M"
 
 	# don't use econf, because it ends up putting things under /usr, which may
 	# collide with other slots of classpath
@@ -97,7 +106,7 @@ src_configure() {
 		--disable-dependency-tracking \
 		--host=${CHOST} \
 		--prefix="${EPREFIX}"/usr/${PN}-${SLOT} \
-		--with-ecj-jar=$(java-pkg_getjar eclipse-ecj:3.3 ecj.jar) \
+		--with-ecj-jar=$(java-pkg_getjar eclipse-ecj-3.3 ecj.jar) \
 		--disable-Werror \
 		${myconf} \
 		|| die "configure failed"
@@ -107,4 +116,5 @@ src_configure() {
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed"
 	dodoc AUTHORS BUGS ChangeLog* HACKING NEWS README THANKYOU TODO || die
+	java-pkg_regjar /usr/${P}/share/classpath/glibj.zip
 }
